<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:text="@string/button_1" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:id="@+id/button2"
        android:layout_toRightOf="@+id/button1"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_toRightOf="@+id/button1"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="30dp"
        android:id="@+id/name_text"
        android:layout_below="@+id/button1"
        android:layout_toLeftOf="@id/button2"
        android:layout_marginTop="100dp"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name_text"
        android:layout_below="@+id/button3"
        android:layout_marginTop="50dp"
        android:id="@+id/name_edit"
        android:layout_toRightOf="@+id/name_text"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        android:layout_below="@+id/name_edit"
        android:id="@+id/button4"
        android:layout_toRightOf="@+id/button1"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit_button"
        android:layout_below="@+id/name_edit"
        android:layout_alignRight="@+id/name_edit"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        android:id="@+id/button5"
        android:layout_below="@+id/submit_button"
        android:layout_toLeftOf="@+id/submit_button"
        />
</RelativeLayout>